Change Log

2009-03-30
       A Debian package was created by Barak Pearlmutter. Thanks for the
       package and a few minor but useful patches!
2009-03-22
       Made pair, string, and vector literals immutable, so expressions
       like these no longer work:
         (set-car! '(a b) 'c)
         (set-cdr! '(a b) 'c)
         (string-set! "foo" 0 #\g)
         (vector-set! '#(a b) 0 'c)
2009-03-15
       Added code to make S9fES compile with PCC. Wow, PCC is so much
       faster, still generates good code, and comes with a liberal
       license. Bye, bye, GCC.
2009-03-14
       Added FreeBSD port.
       Updated s9(1) man page.
2009-03-13
       Fix: made quasiquotation of improper lists work.
       Fix: rewrote the high-level syntax matcher and expander.
       DEFINE-SYNTAX and SYNTAX-RULES should work as expected now,
       including multiple ellipses, etc.
       Made the interpreter report nested QUASIQUOTE (which is
       currently unsupported).
       Added UNIX:UNLINK primitive to extended interpreter.
       (ext/unix.c)
2009-03-12
       Made unix extension procedures return #F in case of an error
       instead of just aborting evaluation.
       Added UNIX:ERRNO primitive to extended interpreter. (ext/unix.c)
       Updated README, fixed s9e(1) man page, updated the binary for
       the unmentionable horror.
2009-03-11
       Added UNIX:READDIR and UNUX:READLINK primitives to extended
       interpreter. (ext/unix.c)
       Added UNIX:GETPWENT primitive to extended interpreter.
       (ext/unix.c)
2009-03-10
       Added FORMAT-TIME procedure to the system extension.
       (ext/system.scm)
       Updated s9e(1) man page.
2009-03-09
       Added UNIX-TIME->TIME and TIME->UNIX-TIME procedures to the
       system extension. (ext/system.scm)
2009-03-08
       Fix: removed recursion from GC of vectors. The garbage collector
       runs completely in constant space now. Yay!
2009-03-03
       Made CHOWN accept user names and default values.