@@ -48,7 +48,8 @@ unix.o:	ext/unix.c
 	$(CC) $(CFLAGS) -I . -o unix.o -c ext/unix.c
 
 s9e.image:	s9e s9e.scm ext/system.scm
-	rm -f $@ && ./s9e -n -f ext/system.scm -d $@
+	rm -f $@ && env S9FES_LIBRARY_PATH=.:./lib \
+			./s9e -n -f ext/system.scm -d $@
 
 s9.1.gz:	s9.1
 	sed -e "s,@LIBDIR@,$(LIBDIR)," <$? |gzip -9 >$@
