@@ -104,26 +104,26 @@ S9(1)                  Scheme 9 from Empty Space                 S9(1)
               Destructively set the current input port.
           (set-output-port! output-port) ==> unspecific
               Destructively set the current output port.
+          (stats form) ==> normal form
+              Evaluate  the  given form and return its normal form. In
+              addition, print the number  of  reduction  steps,  nodes
+              allocated,  and  garbage  collections  performed  during
+              evaluation. Note that form must be quoted.
           (symbols) ==> list
               Return a list of all defined symbols.
           (trace symbol ...) ==> list | #t
           (trace #t) ==> list | #t
               Trace  the  procedure  or  syntax  bound  to  the  given
-              symbols.   When  #t  is  passed  to  trace,  trace   all
-              procedures  and syntax (expect lots of output!). When no
-              arguments are passed  to  it,  disable  tracing.   Trace
-              returns  the  symbols  that were being traced before its
+              symbols.    When  #t  is  passed  to  trace,  trace  all
+              procedures and syntax (expect lots of output!). When  no
+              arguments  are  passed  to  it,  disable tracing.  Trace
+              returns the symbols that were being  traced  before  its
               invocation.
           (wrong string form) ==> bottom
-              Print an error message of the form error:  string:  form
+              Print  an  error message of the form error: string: form
               and terminate program execution.  Form may be omitted.
 
-          Redefinition  of these procedures is safe except for expand-
-          quasiquote and wrong.
-
-VARIABLES
-          These variables are pre-defined  in  the  dynamic  top-level
-          scope of the interpreter.
+          Redefinition of these procedures is safe except for  expand-
 
 
 
@@ -134,22 +134,28 @@ S9 Interpreter                  Page 2                           S9(1)
 S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
 
+          quasiquote and wrong.
+
+VARIABLES
+          These  variables  are  pre-defined  in the dynamic top-level
+          scope of the interpreter.
+
           ** (form)
-              The   normal   form  of  the  expression  most  recently
+              The  normal  form  of  the  expression   most   recently
               evaluated at the top level.
           *extensions* (list of symbols)
               Compiled-in extensions.
           *library-path* (string)
-              A verbatim copy of  the  S9FES_LIBRARY_PATH  environment
+              A  verbatim  copy  of the S9FES_LIBRARY_PATH environment
               variable (see below).
           *loading* (boolean)
               Set to #t when loading a file, else #f.
 
 MACROS
-          A  S9fES  macro  is  a  procedure  that  is  applied  to its
-          unevaluated arguments.  The macro  application  is  replaced
-          with  the  value  returned  by  the procedure.  This happens
-          before the expression containing the  macro  application  is
+          A S9fES  macro  is  a  procedure  that  is  applied  to  its
+          unevaluated  arguments.   The  macro application is replaced
+          with the value returned  by  the  procedure.   This  happens
+          before  the  expression  containing the macro application is
           evaluated, so a macro rewrites its own application:
 
           (define-macro (when p . c)
@@ -166,31 +172,25 @@ MACROS
           (define-macro name procedure) ==> unspecific
           (define-macro (name args ...) body) ==> unspecific
 
-          Both  of  these forms introduce the keyword name and bind it
-          to a procedure. The first form requires the second  argument
-          to  be  a procedure. Like in define forms the second variant
+          Both of these forms introduce the keyword name and  bind  it
+          to  a procedure. The first form requires the second argument
+          to be a procedure. Like in define forms the  second  variant
           implies a procedure definition.
 
-          Macros may contain applications of macros that were  defined
-          earlier.   Macros  may  not  recurse  directly, but they may
-          implement recursion internally using letrec or by  rewriting
-          their  own  applications.  The following macro, for example,
+          Macros  may contain applications of macros that were defined
+          earlier.  Macros may not  recurse  directly,  but  they  may
+          implement  recursion internally using letrec or by rewriting
+          their own applications. The following  macro,  for  example,
           does not work, because d is undefined in the body of d:
 
           (define-macro (d x) (and (pair? x) (d (cdr x)))) ; wrong
 
           The following version does work, though:
 
-          (define-macro (d x) (and (pair? x) `(d ,(cdr x)))) ; OK
 
-ALLOCATION STRATEGY
-          The S9fES memory pool grows exponentially until  the  memory
-          limit  its  reached.  When the limit is reached, the current
-          computation is aborted. A  memory  limit  can  be  specified
-          using  the -m command line option. The limit is specified in
-          units of 1024 nodes (or  in  units  of  1024*1024  nodes  by
-          appending an m suffix).
-          Note that computations may abort before the limit is reached
+
+
+
 
 
 
@@ -200,10 +200,20 @@ S9 Interpreter                  Page 3                           S9(1)
 S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
 
-          due to the way the pool  grows.  Use  the  -g  command  line
+          (define-macro (d x) (and (pair? x) `(d ,(cdr x)))) ; OK
+
+ALLOCATION STRATEGY
+          The  S9fES  memory pool grows exponentially until the memory
+          limit its reached. When the limit is  reached,  the  current
+          computation  is  aborted.  A  memory  limit can be specified
+          using the -m command line option. The limit is specified  in
+          units  of  1024  nodes  (or  in  units of 1024*1024 nodes by
+          appending an m suffix).
+          Note that computations may abort before the limit is reached
+          due  to  the  way  the  pool  grows. Use the -g command line
           option to experiment with pool sizes.
-          Specifying  a memory limit of zero disables the memory limit
-          and the interpreter will allocate as much memory as  it  can
+          Specifying a memory limit of zero disables the memory  limit
+          and  the  interpreter will allocate as much memory as it can
           get. This option should be used with care.
 
 LIMITATIONS
@@ -212,13 +222,12 @@ LIMITATIONS
           Control: call-with-current-continuation.
           I/O: char-ready?.
           Transcripts: transcript-off, transcript-on.
-          Numeric base prefixes: #b, #d, #o, #x.
           Numeric tower: rational, float, complex numbers.
           Numeric syntax and procedures: #e, #i, /, acos, angle, asin,
-          atan, ceiling, complex?, cos,  denominator,  exact->inexact,
-          exact?,  exp,  floor,  imag-part,  inexact->exact, inexact?,
+          atan,  ceiling,  complex?, cos, denominator, exact->inexact,
+          exact?, exp,  floor,  imag-part,  inexact->exact,  inexact?,
           log,  magnitude,  make-polar,  make-rectangular,  numerator,
-          rational,  rationalize,  real-part, real?, round, sin, sqrt,
+          rational, rationalize, real-part, real?, round,  sin,  sqrt,
           tan, truncate.
 
 BUGS
@@ -226,7 +235,7 @@ BUGS
 
 FILES
           $HOME/.s9fes/rc
-              If present, this file is  loaded  when  the  interpreter
+              If  present,  this  file  is loaded when the interpreter
               starts up.
           @LIBDIR@
               The S9fES procedure library (source code).
@@ -239,20 +248,11 @@ FILES
 
 ENVIRONMENT
           S9FES_LIBRARY_PATH
-              A  colon-separated  list  of  directories  which will be
-              searched for the s9  library  when  the  interpreter  is
-              launched.  The  same  directories  will be search by the
+              A colon-separated list  of  directories  which  will  be
+              searched  for  the  s9  library  when the interpreter is
+              launched. The same directories will  be  search  by  the
               locate-file procedure.
               Default: .:~/.s9fes:@LIBDIR@:@LIBDIR@/contrib
-
-SIGNALS
-          These work only if POSIX  signal  handling  was  enabled  at
-          compile time.
-
-          SIGINT
-              Abort input or terminate program execution.
-          SIGQUIT
-              Terminate the interpreter process (emergency exit).
 
 
 
@@ -267,25 +267,25 @@ S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
 
 
+SIGNALS
+          These  work  only  if  POSIX  signal handling was enabled at
+          compile time.
+
+          SIGINT
+              Abort input or terminate program execution.
+          SIGQUIT
+              Terminate the interpreter process (emergency exit).
+
 REFERENCES
           http://www-swiss.ai.mit.edu/~jaffer/r4rs_toc.html
               The Revised^4 Report on the Algorithmic Language Scheme.
 
           http://www.lulu.com/content/1010408
-              Scheme 9 from Empty Space --  A  Guide  to  Implementing
+              Scheme  9  from  Empty  Space -- A Guide to Implementing
               Scheme in C.
 
 AUTHOR
           Nils M Holm < nmh at t3x.org >
-
-
-
-
-
-
-
-
-
 
 
 
